file(GLOB_RECURSE ANALYZER_SRC_C RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.c)
file(GLOB_RECURSE ANALYZER_SRC_H RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)

add_library(${PROJECT_NAME} SHARED ${ANALYZER_SRC_C})
set_target_properties(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS "-fPIC")
target_link_libraries(${PROJECT_NAME} pcap expat pthread)

install(TARGETS ${PROJECT_NAME} DESTINATION lib)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/ DESTINATION include/rplanalyzer FILES_MATCHING PATTERN "*.h")
